--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "obd",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start --tunnel",
     "android": "expo start --android",
@@ -11,16 +10,19 @@
   "dependencies": {
     "@config-plugins/react-native-ble-plx": "^3.0.0",
     "@expo/webpack-config": "^0.17.0",
+    "@react-native-community/checkbox": "^0.5.12",
     "expo": "~46.0.9",
     "expo-splash-screen": "~0.16.2",
     "expo-status-bar": "~1.4.0",
-    "expo-updates": "~0.14.5",
+    "expo-updates": "~0.14.6",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.5",
+    "react-native-base64": "^0.2.1",
     "react-native-ble-plx": "^2.0.3",
     "react-native-paper": "^5.0.0-rc.6",
-    "react-native-web": "~0.18.7"
+    "react-native-web": "~0.18.7",
+    "rn-range-slider": "^2.2.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
