--- a/package.json
+++ b/package.json
@@ -5,19 +5,23 @@
     "start": "expo start --tunnel",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "dev": "APP_VARIANT=development expo start --dev-client --tunnel"
   },
   "dependencies": {
     "@config-plugins/react-native-ble-plx": "^3.0.0",
     "@expo/webpack-config": "^0.17.0",
-    "@react-native-community/checkbox": "^0.5.12",
-    "expo": "~46.0.9",
+    "buffer": "^6.0.3",
+    "chart.js": "^3.9.1",
+    "expo": "~46.0.13",
+    "expo-dev-client": "~1.3.1",
     "expo-splash-screen": "~0.16.2",
     "expo-status-bar": "~1.4.0",
     "expo-updates": "~0.14.6",
     "react": "18.0.0",
+    "react-chartjs-2": "^4.3.1",
     "react-dom": "18.0.0",
-    "react-native": "0.69.5",
+    "react-native": "0.69.6",
     "react-native-base64": "^0.2.1",
     "react-native-ble-plx": "^2.0.3",
     "react-native-paper": "^5.0.0-rc.6",
