--- a/package.json
+++ b/package.json
@@ -12,19 +12,20 @@
     "@config-plugins/react-native-ble-plx": "^3.0.0",
     "@expo/webpack-config": "^0.17.0",
     "buffer": "^6.0.3",
-    "chart.js": "^3.9.1",
     "expo": "~46.0.13",
     "expo-dev-client": "~1.3.1",
     "expo-splash-screen": "~0.16.2",
     "expo-status-bar": "~1.4.0",
     "expo-updates": "~0.14.6",
     "react": "18.0.0",
-    "react-chartjs-2": "^4.3.1",
     "react-dom": "18.0.0",
     "react-native": "0.69.6",
     "react-native-base64": "^0.2.1",
     "react-native-ble-plx": "^2.0.3",
+    "react-native-chart-kit": "^6.12.0",
+    "react-native-dropdown-picker": "^5.4.2",
     "react-native-paper": "^5.0.0-rc.6",
+    "react-native-svg": "^13.4.0",
     "react-native-web": "~0.18.7",
     "rn-range-slider": "^2.2.2"
   },
