--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-native-paper": "^5.0.0-rc.6",
     "react-native-svg": "^13.4.0",
     "react-native-web": "~0.18.7",
-    "rn-range-slider": "^2.2.2"
+    "rn-range-slider": "^2.2.2",
+    "react-native-reanimated": "~2.9.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
