--- a/package.json
+++ b/package.json
@@ -37,8 +37,10 @@
     "eslint": "^8.27.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.31.10",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-native": "^4.0.0",
-    "prettier": "^2.7.1"
+    "prettier": "^2.7.1",
+    "prettier-eslint": "^15.0.1"
   },
   "private": true
 }
