--- a/package.json
+++ b/package.json
@@ -1,46 +1,55 @@
 {
-  "name": "obd",
-  "version": "1.0.0",
-  "scripts": {
-    "start": "expo start --tunnel",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web",
-    "dev": "APP_VARIANT=development expo start --dev-client --tunnel",
-    "lint": "eslint .",
-    "format": "prettier --check ./components"
-  },
-  "dependencies": {
-    "@config-plugins/react-native-ble-plx": "^3.0.0",
-    "@expo/webpack-config": "^0.17.0",
-    "buffer": "^6.0.3",
-    "expo": "~46.0.13",
-    "expo-dev-client": "~1.3.1",
-    "expo-splash-screen": "~0.16.2",
-    "expo-status-bar": "~1.4.0",
-    "expo-updates": "~0.14.6",
-    "react": "18.0.0",
-    "react-dom": "18.0.0",
-    "react-native": "0.69.6",
-    "react-native-base64": "^0.2.1",
-    "react-native-ble-plx": "^2.0.3",
-    "react-native-chart-kit": "^6.12.0",
-    "react-native-dropdown-picker": "^5.4.2",
-    "react-native-paper": "^5.0.0-rc.6",
-    "react-native-reanimated": "~2.9.1",
-    "react-native-svg": "^13.4.0",
-    "react-native-web": "~0.18.7",
-    "rn-range-slider": "^2.2.2"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.12.9",
-    "eslint": "^8.27.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-react": "^7.31.10",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-native": "^4.0.0",
-    "prettier": "^2.7.1",
-    "prettier-eslint": "^15.0.1"
-  },
-  "private": true
+    "name": "obd",
+    "version": "1.0.0",
+    "scripts": {
+        "start": "expo start --tunnel",
+        "android": "expo start --android",
+        "ios": "expo start --ios",
+        "web": "expo start --web",
+        "dev": "APP_VARIANT=development expo start --dev-client --tunnel",
+        "lint": "eslint .",
+        "format": "prettier --check ./components"
+    },
+    "dependencies": {
+        "@config-plugins/react-native-ble-plx": "^3.0.0",
+        "@expo/webpack-config": "^0.17.0",
+        "@react-navigation/material-bottom-tabs": "^6.2.4",
+        "@react-navigation/native": "^6.0.13",
+        "buffer": "^6.0.3",
+        "expo": "~46.0.13",
+        "expo-dev-client": "~1.3.1",
+        "expo-splash-screen": "~0.16.2",
+        "expo-status-bar": "~1.4.0",
+        "expo-updates": "~0.14.6",
+        "react": "18.0.0",
+        "react-dom": "18.0.0",
+        "react-native": "0.69.6",
+        "react-native-base64": "^0.2.1",
+        "react-native-ble-plx": "^2.0.3",
+        "react-native-chart-kit": "^6.12.0",
+        "react-native-dropdown-picker": "^5.4.2",
+        "react-native-paper": "^5.0.0-rc.6",
+        "react-native-reanimated": "~2.9.1",
+        "react-native-safe-area-context": "4.3.1",
+        "react-native-screens": "~3.15.0",
+        "react-native-svg": "^13.4.0",
+        "react-native-web": "~0.18.7",
+        "rn-range-slider": "^2.2.2"
+    },
+    "devDependencies": {
+        "@babel/core": "^7.12.9",
+        "eslint": "^8.27.0",
+        "eslint-plugin-prettier": "^4.2.1",
+        "eslint-plugin-react": "^7.31.10",
+        "eslint-plugin-react-hooks": "^4.6.0",
+        "eslint-plugin-react-native": "^4.0.0",
+        "prettier": "^2.7.1",
+        "prettier-eslint": "^15.0.1"
+    },
+    "overrides": {
+        "@react-navigation/material-bottom-tabs": {
+            "react-native-paper": "^5.0.0-rc.6"
+        }
+    },
+    "private": true
 }
