--- a/app.json
+++ b/app.json
@@ -1,48 +1,44 @@
 {
-  "expo": {
-    "name": "OBD",
-    "slug": "OBD",
-    "version": "1.0.1",
-    "orientation": "portrait",
-    "icon": "./assets/icon.png",
-    "userInterfaceStyle": "light",
-    "splash": {
-      "image": "./assets/splash.png",
-      "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
-    },
-    "updates": {
-      "fallbackToCacheTimeout": 0
-    },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
-    "ios": {
-      "supportsTablet": true,
-      "bundleIdentifier": "com.per.obd"
-    },
-    "android": {
-      "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon-engine.png",
-        "backgroundColor": "#FFFFFF"
-      },
-      "package": "com.per.obd",
-      "permissions": [
-        "android.permission.BLUETOOTH",
-        "android.permission.BLUETOOTH_ADMIN",
-        "android.permission.BLUETOOTH_CONNECT"
-      ]
-    },
-    "web": {
-      "favicon": "./assets/favicon.png"
-    },
-    "plugins": [
-      "@config-plugins/react-native-ble-plx"
-    ],
-    "extra": {
-      "eas": {
-        "projectId": "99a423d6-cc4a-4a56-8eae-33100da0563f"
-      }
+    "expo": {
+        "name": "OBD",
+        "slug": "OBD",
+        "version": "1.0.2",
+        "orientation": "portrait",
+        "icon": "./assets/icon.png",
+        "userInterfaceStyle": "light",
+        "splash": {
+            "image": "./assets/splash.png",
+            "resizeMode": "contain",
+            "backgroundColor": "#ffffff"
+        },
+        "updates": {
+            "fallbackToCacheTimeout": 0
+        },
+        "assetBundlePatterns": ["**/*"],
+        "ios": {
+            "supportsTablet": true,
+            "bundleIdentifier": "com.per.obd"
+        },
+        "android": {
+            "adaptiveIcon": {
+                "foregroundImage": "./assets/adaptive-icon-engine.png",
+                "backgroundColor": "#FFFFFF"
+            },
+            "package": "com.per.obd",
+            "permissions": [
+                "android.permission.BLUETOOTH",
+                "android.permission.BLUETOOTH_ADMIN",
+                "android.permission.BLUETOOTH_CONNECT"
+            ]
+        },
+        "web": {
+            "favicon": "./assets/favicon.png"
+        },
+        "plugins": ["@config-plugins/react-native-ble-plx"],
+        "extra": {
+            "eas": {
+                "projectId": "99a423d6-cc4a-4a56-8eae-33100da0563f"
+            }
+        }
     }
-  }
 }
