--- a/package.json
+++ b/package.json
@@ -6,38 +6,38 @@
         "android": "expo start --android",
         "ios": "expo start --ios",
         "web": "expo start --web",
-        "dev": "APP_VARIANT=development expo start --dev-client --tunnel",
+        "dev": "APP_VARIANT=development npx expo start --dev-client --tunnel",
         "lint": "eslint .",
         "format": "prettier --check ./components"
     },
     "dependencies": {
-        "@config-plugins/react-native-ble-plx": "^3.0.0",
-        "@expo/webpack-config": "^0.17.0",
+        "@config-plugins/react-native-ble-plx": "^4.0.0",
+        "@expo/webpack-config": "^0.17.2",
         "@react-navigation/material-bottom-tabs": "^6.2.4",
         "@react-navigation/native": "^6.0.13",
         "buffer": "^6.0.3",
-        "expo": "~46.0.13",
-        "expo-dev-client": "~1.3.1",
-        "expo-splash-screen": "~0.16.2",
-        "expo-status-bar": "~1.4.0",
-        "expo-updates": "~0.14.6",
-        "react": "18.0.0",
-        "react-dom": "18.0.0",
-        "react-native": "0.69.6",
+        "expo": "^47.0.0",
+        "expo-dev-client": "~2.0.0",
+        "expo-splash-screen": "~0.17.4",
+        "expo-status-bar": "~1.4.2",
+        "expo-updates": "~0.15.4",
+        "react": "18.1.0",
+        "react-dom": "18.1.0",
+        "react-native": "0.70.5",
         "react-native-base64": "^0.2.1",
         "react-native-ble-plx": "^2.0.3",
         "react-native-chart-kit": "^6.12.0",
         "react-native-dropdown-picker": "^5.4.2",
         "react-native-paper": "^5.0.0-rc.6",
-        "react-native-reanimated": "~2.9.1",
-        "react-native-safe-area-context": "4.3.1",
-        "react-native-screens": "~3.15.0",
-        "react-native-svg": "^13.4.0",
+        "react-native-reanimated": "~2.12.0",
+        "react-native-safe-area-context": "4.4.1",
+        "react-native-screens": "~3.18.0",
+        "react-native-svg": "13.4.0",
         "react-native-web": "~0.18.7",
         "rn-range-slider": "^2.2.2"
     },
     "devDependencies": {
-        "@babel/core": "^7.12.9",
+        "@babel/core": "^7.19.3",
         "eslint": "^8.27.0",
         "eslint-plugin-prettier": "^4.2.1",
         "eslint-plugin-react": "^7.31.10",
