--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
         "android": "expo start --android",
         "ios": "expo start --ios",
         "web": "expo start --web",
-        "dev": "APP_VARIANT=development npx expo start --dev-client --tunnel"
+        "postinstall": "patch-package"
     },
     "dependencies": {
         "@config-plugins/react-native-ble-plx": "^4.0.0",
@@ -19,6 +19,7 @@
         "expo-splash-screen": "~0.17.4",
         "expo-status-bar": "~1.4.2",
         "expo-updates": "~0.15.4",
+        "patch-package": "^6.5.0",
         "react": "18.1.0",
         "react-dom": "18.1.0",
         "react-native": "0.70.5",
