--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
         "android": "expo start --android",
         "ios": "expo start --ios",
         "web": "expo start --web",
+        "dev": "APP_VARIANT=development npx expo start --dev-client --tunnel",
+        "devlocal": "URL=http://localhost:3001/api npx expo start --dev-client --tunnel",
         "postinstall": "patch-package"
     },
     "dependencies": {
