--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "react-native": "0.70.5",
         "react-native-base64": "^0.2.1",
         "react-native-ble-plx": "^2.0.3",
+        "react-native-bluetooth-classic": "^1.60.0-rc.24",
         "react-native-chart-kit": "^6.12.0",
         "react-native-dropdown-picker": "^5.4.2",
         "react-native-paper": "^5.0.0-rc.10",
@@ -35,7 +36,8 @@
         "react-native-screens": "~3.18.0",
         "react-native-svg": "13.4.0",
         "react-native-web": "~0.18.7",
-        "rn-range-slider": "^2.2.2"
+        "rn-range-slider": "^2.2.2",
+        "with-rn-bluetooth-classic": "^1.0.5"
     },
     "devDependencies": {
         "@babel/core": "^7.19.3",
