--- a/package.json
+++ b/package.json
@@ -1,59 +1,61 @@
 {
-    "name": "obd",
-    "version": "1.0.0",
-    "scripts": {
-        "start": "expo start --tunnel",
-        "android": "expo start --android",
-        "ios": "expo start --ios",
-        "web": "expo start --web",
-        "dev": "APP_VARIANT=development npx expo start --dev-client --tunnel",
-        "devlocal": "URL=http://localhost:3001/api npx expo start --dev-client --tunnel",
-        "postinstall": "patch-package"
-    },
-    "dependencies": {
-        "@config-plugins/react-native-ble-plx": "^4.0.0",
-        "@expo/webpack-config": "^0.17.2",
-        "@react-navigation/material-bottom-tabs": "^6.2.4",
-        "@react-navigation/native": "^6.0.13",
-        "buffer": "^6.0.3",
-        "expo": "^47.0.0",
-        "expo-dev-client": "~2.0.0",
-        "expo-splash-screen": "~0.17.4",
-        "expo-status-bar": "~1.4.2",
-        "expo-updates": "~0.15.4",
-        "patch-package": "^6.5.0",
-        "react": "18.1.0",
-        "react-dom": "18.1.0",
-        "react-native": "0.70.5",
-        "react-native-base64": "^0.2.1",
-        "react-native-ble-plx": "^2.0.3",
-        "react-native-bluetooth-classic": "^1.60.0-rc.24",
-        "react-native-chart-kit": "^6.12.0",
-        "react-native-dropdown-picker": "^5.4.2",
-        "react-native-paper": "^5.0.0-rc.10",
-        "react-native-reanimated": "~2.12.0",
-        "react-native-safe-area-context": "4.4.1",
-        "react-native-screens": "~3.18.0",
-        "react-native-svg": "13.4.0",
-        "react-native-web": "~0.18.7",
-        "rn-range-slider": "^2.2.2",
-        "with-rn-bluetooth-classic": "^1.0.5"
-    },
-    "devDependencies": {
-        "@babel/core": "^7.19.3",
-        "babel-plugin-transform-inline-environment-variables": "^0.4.4",
-        "eslint": "^8.27.0",
-        "eslint-plugin-prettier": "^4.2.1",
-        "eslint-plugin-react": "^7.31.10",
-        "eslint-plugin-react-hooks": "^4.6.0",
-        "eslint-plugin-react-native": "^4.0.0",
-        "prettier": "^2.7.1",
-        "prettier-eslint": "^15.0.1"
-    },
-    "overrides": {
-        "@react-navigation/material-bottom-tabs": {
-            "react-native-paper": "^5.0.0-rc.10"
-        }
-    },
-    "private": true
+  "name": "obd",
+  "version": "1.0.0",
+  "scripts": {
+    "start": "expo start --tunnel",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
+    "web": "expo start --web",
+    "dev": "APP_VARIANT=development npx expo start --dev-client --tunnel",
+    "devlocal": "URL=http://localhost:3001/api npx expo start --dev-client --tunnel",
+    "postinstall": "patch-package"
+  },
+  "dependencies": {
+    "@config-plugins/react-native-ble-plx": "^4.0.0",
+    "@expo/webpack-config": "^0.17.2",
+    "@react-navigation/material-bottom-tabs": "^6.2.4",
+    "@react-navigation/native": "^6.0.13",
+    "@react-navigation/stack": "^6.3.7",
+    "buffer": "^6.0.3",
+    "expo": "^47.0.0",
+    "expo-dev-client": "~2.0.0",
+    "expo-splash-screen": "~0.17.4",
+    "expo-status-bar": "~1.4.2",
+    "expo-updates": "~0.15.4",
+    "patch-package": "^6.5.0",
+    "react": "18.1.0",
+    "react-dom": "18.1.0",
+    "react-native": "0.70.5",
+    "react-native-base64": "^0.2.1",
+    "react-native-ble-plx": "^2.0.3",
+    "react-native-bluetooth-classic": "^1.60.0-rc.24",
+    "react-native-chart-kit": "^6.12.0",
+    "react-native-dropdown-picker": "^5.4.2",
+    "react-native-paper": "^5.0.0-rc.10",
+    "react-native-reanimated": "~2.12.0",
+    "react-native-safe-area-context": "4.4.1",
+    "react-native-screens": "~3.18.0",
+    "react-native-svg": "13.4.0",
+    "react-native-web": "~0.18.7",
+    "rn-range-slider": "^2.2.2",
+    "with-rn-bluetooth-classic": "^1.0.5",
+    "react-native-gesture-handler": "~2.8.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.19.3",
+    "babel-plugin-transform-inline-environment-variables": "^0.4.4",
+    "eslint": "^8.27.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.31.10",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-native": "^4.0.0",
+    "prettier": "^2.7.1",
+    "prettier-eslint": "^15.0.1"
+  },
+  "overrides": {
+    "@react-navigation/material-bottom-tabs": {
+      "react-native-paper": "^5.0.0-rc.10"
+    }
+  },
+  "private": true
 }
