--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "react-native-web": "~0.18.7",
     "rn-range-slider": "^2.2.2",
     "with-rn-bluetooth-classic": "^1.0.5",
-    "react-native-gesture-handler": "~2.8.0"
+    "react-native-gesture-handler": "~2.8.0",
+    "@react-native-async-storage/async-storage": "~1.17.3"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
