--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "@config-plugins/react-native-ble-plx": "^4.0.0",
     "@expo/webpack-config": "^0.17.2",
+    "@react-native-async-storage/async-storage": "~1.17.3",
+    "@react-native-community/slider": "^4.3.3",
     "@react-navigation/material-bottom-tabs": "^6.2.4",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/stack": "^6.3.7",
@@ -31,16 +33,14 @@
     "react-native-bluetooth-classic": "^1.60.0-rc.24",
     "react-native-chart-kit": "^6.12.0",
     "react-native-dropdown-picker": "^5.4.2",
+    "react-native-gesture-handler": "~2.8.0",
     "react-native-paper": "^5.0.0-rc.10",
     "react-native-reanimated": "~2.12.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
     "react-native-svg": "13.4.0",
     "react-native-web": "~0.18.7",
-    "rn-range-slider": "^2.2.2",
-    "with-rn-bluetooth-classic": "^1.0.5",
-    "react-native-gesture-handler": "~2.8.0",
-    "@react-native-async-storage/async-storage": "~1.17.3"
+    "with-rn-bluetooth-classic": "^1.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
