--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/stack": "^6.3.7",
     "buffer": "^6.0.3",
+    "deepmerge": "^4.2.2",
     "expo": "^47.0.0",
     "expo-dev-client": "~2.0.0",
     "expo-splash-screen": "~0.17.4",
