--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "react-native-svg": "13.4.0",
     "react-native-web": "~0.18.7",
     "with-rn-bluetooth-classic": "^1.0.5",
-    "expo-location": "~15.0.1"
+    "expo-keep-awake": "~11.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
