--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-native-chart-kit": "^6.12.0",
     "react-native-dropdown-picker": "^5.4.2",
     "react-native-gesture-handler": "~2.8.0",
+    "react-native-maps": "1.3.2",
     "react-native-paper": "^5.0.0-rc.10",
     "react-native-reanimated": "~2.12.0",
     "react-native-safe-area-context": "4.4.1",
