--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "deepmerge": "^4.2.2",
     "expo": "^47.0.0",
     "expo-dev-client": "~2.0.0",
+    "expo-location": "~15.0.1",
     "expo-splash-screen": "~0.17.4",
     "expo-status-bar": "~1.4.2",
     "expo-updates": "~0.15.4",
