Added Victory charts

--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-native-screens": "~3.18.0",
     "react-native-svg": "13.4.0",
     "react-native-web": "~0.18.7",
+    "victory-native": "^36.6.8",
     "with-rn-bluetooth-classic": "^1.0.5",
     "expo-keep-awake": "~11.0.1"
   },
